--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "connect-graphs": "npx apollo service:push --graph=cv-graph-oya16m --key=service:cv-graph-oya16m:j-m42euf_J7XUrSfOfwjpg --variant=current"
   },
   "keywords": [],
   "author": "",
