--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "my-latest-cv",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "connect-graphs": "npx apollo service:push --graph=cv-graph-oya16m --key=service:cv-graph-oya16m:j-m42euf_J7XUrSfOfwjpg --variant=current"
+    "connectgraphs": "npx apollo service:push --graph=cv-graph-oya16m --key=service:cv-graph-oya16m:j-m42euf_J7XUrSfOfwjpg --variant=current",
+    "start": "cd client && rm -rf build && npm run build && cd ../ && nodemon app"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.8"
-  }
+    "mongoose": "^5.11.8",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {}
 }
