--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "graphql-tools": "^7.0.2",
     "mongoose": "^5.11.8",
     "nodemon": "^2.0.6",
     "path": "^0.12.7"
