--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
     "antd": "^4.11.2",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
@@ -46,9 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-onsenui": "^2.9.13",
-    "@types/react-router-dom": "^5.1.7"
   }
 }
