--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.19.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "express-validator": "^6.9.2",
     "graphql-tools": "^7.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "nodemon": "^2.0.6",
     "path": "^0.12.7"
