--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "connectgraphs": "npx apollo service:push --graph=cv-graph-oya16m --key=service:cv-graph-oya16m:j-m42euf_J7XUrSfOfwjpg --variant=current",
     "start": "npm i && nodemon app",
+    "begin": "nodemon app",
     "heroku-postbuild": "cd ./client && npm i && rm -rf build && npm run build"
   },
   "keywords": [],
@@ -22,6 +23,8 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-validator": "^6.9.2",
+    "graphql-compose": "^7.25.0",
+    "graphql-compose-mongoose": "^9.1.0",
     "graphql-tools": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
